# OpenMovingHumanFlow

./: .gitignore  LICENSE  README.md
EsBimCore/: Base.cpp  Base.hpp  BaseDoor.cpp  BaseDoor.hpp  BaseDoorTamplate.hpp  BaseElement.cpp  BaseElement.hpp  BaseElementTamplate.hpp  BimCore.hpp  CMakeLists.txt  DistributionType.hpp  Door.cpp  Door.hpp  PolygonTools.cpp  PolygonTools.hpp  Room.cpp  Room.hpp  Safety.cpp  Safety.hpp  Stair.cpp  Stair.hpp
EsBimCore/Devices/: BimDevBase.hpp  DevDirectionIndicator.hpp  DevDoorTrafficLight.hpp  DevFireDetectorManual.hpp  DevTamplate.hpp
EsBimCore/JsonView/: BimAddrInfo.cpp  BimAddrInfo.hpp  BimBaseElement.cpp  BimBaseElement.hpp  BimDevices.cpp  BimDevices.hpp  BimDevicesTypes.cpp  BimDevicesTypes.hpp  BimDoorElement.cpp  BimDoorElement.hpp  BimElementSign.cpp  BimElementSign.hpp  BimLevels.cpp  BimLevels.hpp  BimPolygonPoint.cpp  BimPolygonPoint.hpp  BimPolygonRing.cpp  BimPolygonRing.hpp  BimRoomElement.cpp  BimRoomElement.hpp  BimRoot.cpp  BimRoot.hpp  BimStairElement.cpp  BimStairElement.hpp
EsGateToHard/: CMakeLists.txt  main.cpp  usetty.hpp
EsModelOfMoving/: CMakeLists.txt  PMovingCore.hpp  PeopleTraffic.cpp  PeopleTraffic.hpp
EsSystem/: CMakeLists.txt  EEsystemApp.cpp  EEsystemApp.hpp  EEsystemAppConfig.cpp  EEsystemAppConfig.hpp  EEsystemAppTask.cpp  EEsystemAppTask.hpp  EEsystem_global.hpp  EvacAppConfigTest.hpp  eesystemmodelconfig.hpp  main.cpp
